website/versioned_docs/version-16.1.0/api/puppeteer.waitforoptions.md
---
sidebar_label: WaitForOptions
---

# WaitForOptions interface

**Signature:**

```typescript
export interface WaitForOptions
```

## Properties

| Property                                              | Modifiers | Type                                                                                                                                       | Description                                                                                                              |
| ----------------------------------------------------- | --------- | ------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------ |
| [timeout?](./puppeteer.waitforoptions.timeout.md)     |           | number                                                                                                                                     | <i>(Optional)</i> Maximum wait time in milliseconds, defaults to 30 seconds, pass <code>0</code> to disable the timeout. |
| [waitUntil?](./puppeteer.waitforoptions.waituntil.md) |           | [PuppeteerLifeCycleEvent](./puppeteer.puppeteerlifecycleevent.md) \| [PuppeteerLifeCycleEvent](./puppeteer.puppeteerlifecycleevent.md)\[\] | <i>(Optional)</i>                                                                                                        |
